# motrix-web-next

./: .dockerignore  Dockerfile  README.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  docker-build.yml  release.yml
src/: main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs
src-tauri/binaries/: motrix-next-engine-aarch64-unknown-linux-gnu  motrix-next-engine-x86_64-unknown-linux-gnu
src-tauri/src/: db_guard.rs  history.rs  lib.rs  main_web.rs  upnp.rs
src-tauri/src/aria2/: client.rs
src-tauri/src/commands/: config.rs  fs.rs  net.rs  protocol.rs  updater.rs
src-tauri/src/engine/: args.rs  cleanup.rs  lifecycle.rs  log_level.rs  mod.rs  state.rs
src-tauri/src/services/: http_api.rs  mod.rs  notification.rs  port_guard.rs  power.rs  stat.rs
src-tauri/src/web/: engine.rs  mod.rs
src-tauri/src/web/routes/: config.rs  engine.rs  events.rs  files.rs  history.rs  misc.rs  mod.rs  tasks.rs
src/api/: aria2.ts  httpClient.ts  sse.ts
src/components/common/: DirectoryPopover.vue  UserAgentPopover.vue
src/components/preference/: Advanced.vue  Ed2k.vue  Network.vue
src/components/task/: AddTask.vue  TaskDetail.vue  TaskList.vue
src/components/task/__tests__/: AddTask.test.ts  TaskList.test.ts  proxyModeUi.test.ts
src/components/task/addtask/: AdvancedOptions.vue
src/composables/: useAddTaskFileOps.ts  useAddTaskSubmit.ts  useAdvancedActions.ts  useAdvancedPreference.ts  useAppMessage.ts  useDownloadCleanup.ts  useEd2kSearchSession.ts  useFileDelete.ts  useMagnetFlow.ts  useNetworkPreference.ts  useNotificationToast.ts  usePreferenceForm.ts  useTaskActions.ts  useTaskDetailOptions.ts  useTaskFileMissing.ts  useTaskNotifyHandlers.ts  useTorrentParser.ts
src/composables/__tests__/: useAddTaskSubmit.test.ts  useAdvancedPreference.test.ts  useAppMessage.test.ts  useDownloadCleanup.test.ts  useFileDelete.test.ts  useNetworkPreference.test.ts  useNotificationToast.test.ts  usePreferenceForm.test.ts  useTaskDetailOptions.test.ts  useTaskNotifyHandlers.test.ts
src/composables/web/: useIpc.ts
src/layouts/: MainLayout.vue
src/mock/: tauri-api-app.ts  tauri-api-core.ts  tauri-api-event.ts  tauri-api-path.ts  tauri-api-webview.ts  tauri-api-window.ts  tauri-plugin-autostart.ts  tauri-plugin-clipboard-manager.ts  tauri-plugin-deep-link.ts  tauri-plugin-dialog.ts  tauri-plugin-fs.ts  tauri-plugin-locale-api.ts  tauri-plugin-log.ts  tauri-plugin-notification.ts  tauri-plugin-opener.ts  tauri-plugin-os.ts  tauri-plugin-process.ts  tauri-plugin-shell.ts  tauri-plugin-sql.ts  tauri-plugin-store.ts  tauri-plugin-updater.ts
src/shared/: configKeys.ts  constants.ts  types.ts
src/shared/__tests__/: proxyModeLabels.test.ts  sidecarBinaries.test.ts
src/shared/locales/ar/: preferences.js  task.js
src/shared/locales/bg/: preferences.js  task.js
src/shared/locales/ca/: preferences.js  task.js
src/shared/locales/de/: preferences.js  task.js
src/shared/locales/el/: preferences.js  task.js
src/shared/locales/en-US/: preferences.js  task.js
src/shared/locales/es/: preferences.js  task.js
src/shared/locales/fa/: preferences.js  task.js
src/shared/locales/fr/: preferences.js  task.js
src/shared/locales/hi/: preferences.js  task.js
src/shared/locales/hu/: preferences.js  task.js
src/shared/locales/id/: preferences.js  task.js
src/shared/locales/it/: preferences.js  task.js
src/shared/locales/ja/: preferences.js  task.js
src/shared/locales/ko/: preferences.js  task.js
src/shared/locales/nb/: preferences.js  task.js
src/shared/locales/nl/: preferences.js  task.js
src/shared/locales/pl/: preferences.js  task.js
src/shared/locales/pt-BR/: preferences.js  task.js
src/shared/locales/ro/: preferences.js  task.js
src/shared/locales/ru/: preferences.js  task.js
src/shared/locales/th/: preferences.js  task.js
src/shared/locales/tr/: preferences.js  task.js
src/shared/locales/uk/: preferences.js  task.js
src/shared/locales/vi/: preferences.js  task.js
src/shared/locales/zh-CN/: preferences.js  task.js
src/shared/locales/zh-TW/: preferences.js  task.js
src/shared/utils/: batchHelpers.ts  config.ts  configHydration.ts  proxyPolicy.ts  settingsBackup.ts  systemConfig.ts  tracker.ts  userVisibleDirectory.ts
src/shared/utils/__tests__/: batchHelpers.test.ts  config.test.ts  settingsBackup.test.ts  tracker.test.ts
src/stores/: app.ts  history.ts  preference.ts
src/stores/__tests__/: app.test.ts  preference.test.ts  task.test.ts  taskOperations.test.ts
src/stores/task/: index.ts
src/views/: TaskView.vue
