[package]
name = "motrix-next"
version = "3.9.5-beta.6"
description = "A full-featured download manager"
authors = ["AnInsomniacy"]
edition = "2021"

[features]
default = ["desktop"]
desktop = ["dep:tauri", "dep:tauri-build", "dep:tauri-plugin-opener", "dep:tauri-plugin-store", "dep:tauri-plugin-autostart", "dep:tauri-plugin-updater", "dep:tauri-plugin-deep-link", "dep:tauri-plugin-shell", "dep:tauri-plugin-dialog", "dep:tauri-plugin-notification", "dep:tauri-plugin-process", "dep:tauri-plugin-os", "dep:tauri-plugin-fs", "dep:tauri-plugin-clipboard-manager", "dep:tauri-plugin-single-instance", "dep:tauri-plugin-locale", "dep:tauri-plugin-window-state", "dep:tauri-plugin-log", "dep:tauri-plugin-sql", "dep:keepawake", "dep:rfd", "dep:notify-rust"]
web = ["dep:axum", "dep:tower-http", "dep:tower", "dep:env_logger", "dep:tokio-stream", "dep:futures-util"]

[lib]
name = "motrix_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "motrix-next"
path = "src/main.rs"
required-features = ["desktop"]

[[bin]]
name = "motrix-web-next"
path = "src/main_web.rs"
required-features = ["web"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [], optional = true }

[dependencies]
# ── Tauri (desktop only) ──────────────────────────────────────────
tauri = { version = "2.11.2", features = ["macos-private-api", "tray-icon", "image-png"], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-store = { version = "2", optional = true }
tauri-plugin-autostart = { version = "2", optional = true }
tauri-plugin-updater = { version = "2.10.1", optional = true }
tauri-plugin-deep-link = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
tauri-plugin-os = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }
tauri-plugin-clipboard-manager = { version = "2", optional = true }
tauri-plugin-single-instance = { version = "2", features = ["deep-link"], optional = true }
tauri-plugin-locale = { version = "2.0.1", optional = true }
tauri-plugin-window-state = { version = "2.4.1", optional = true }
tauri-plugin-log = { version = "2.8.0", optional = true }
tauri-plugin-sql = { version = "2", features = ["sqlite"], optional = true }

# ── Web server (web only) ─────────────────────────────────────────
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors", "fs"], optional = true }
tower = { version = "0.5", optional = true }
env_logger = { version = "0.10", optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
futures-util = { version = "0.3", optional = true }

# ── Shared ────────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
thiserror = "2"
url = "2.5.8"
igd-next = { version = "0.15", features = ["aio_tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
dirs = "6"
zip = { version = "2", default-features = false, features = ["deflate"] }
chrono = "0.4"
trash = "5"
dunce = "1"
os_info = "3"
sys-locale = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
rfd = { version = "0.16", default-features = false, optional = true }
maxminddb = { version = "0.27", features = ["mmap"] }
keepawake = { version = "0.6", optional = true }
mime2ext = "0.1"
urlencoding = "2"
sanitize-filename = "0.6"
opener = { version = "0.8", features = ["reveal"] }
content_disposition = "0.4"
rfc2047-decoder = "1.1"
strip-ansi-escapes = "0.2.1"
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Graphics_Dwm",
    "Win32_System_Power",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.56"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = { version = "4.14", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSDockTile", "NSApplication"] }
objc2-foundation = { version = "0.3", features = ["NSURL", "NSString", "NSBundle"] }
core-foundation = "0.10"
system-configuration = "0.7.0"

[lints.clippy]
unwrap_used = "deny"
redundant_closure_for_method_calls = "warn"